--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "@eslint/eslintrc": "^3"
+  },
+  "volta": {
+    "node": "22.12.0",
+    "pnpm": "9.15.0"
   }
 }
