--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,16 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
+
+      - name: Setup Volta
+        uses: volta-cli/action@v4
+
+      - name: Version Check
+        run: |
+          node --version
+          npm --version
+          volta --version
+
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
