--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^3.99.0"
   },
   "volta": {
     "node": "22.12.0",
