--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,8 @@ jobs:
       - name: Setup Volta
         uses: volta-cli/action@v4
 
-      - name: Version Check
-        run: |
-          node --version
-          npm --version
-          volta --version
+      - name: Build
+        run: pnpm run build
 
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
