--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         uses: volta-cli/action@v4
 
       - name: Install Dependencies
-        run: volta install && pnpm install
+        run: volta install pnpm && pnpm install
 
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
