--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,7 @@ jobs:
         run: |
           volta install node
           volta install pnpm
-
-      - name: aaa
-        run: |
-          pnpm --version
+          pnpm install
 
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
