--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Setup Volta
         uses: volta-cli/action@v4
 
+      - name: Install Dependencies
+        run: pnpm run build
+
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
