--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,12 @@ jobs:
         run: |
           volta install node
           volta install pnpm
-          pnpm install && pnpm run build
+          pnpm install
+        continue-on-error: true
+
+      - name: Build
+        run: pnpm run build
+        continue-on-error: true
 
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
