--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,11 @@ jobs:
           volta install node
           volta install pnpm
           pnpm install
-        continue-on-error: true
 
       - name: Build
         run: pnpm run build
-        continue-on-error: true
+
+      - run: echo ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
