--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,10 @@ jobs:
       - name: Setup Volta
         uses: volta-cli/action@v4
 
-      - name: Version Check
-        run: |
-          node --version
-          pnpm --version
-
       - name: Build
-        run: pnpm run build
+        run: |
+          pnpm install
+          pnpm run build
 
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
